[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Code/Information.gd" type="Script" id=1]
[ext_resource path="res://Assets/Scenes/Spawn nubes.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Code/Main.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sprites/up_background.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/background.png" type="Texture" id=6]
[ext_resource path="res://Assets/Tema botones.tres" type="Theme" id=7]

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 11.32, 11.32 )
z_index = 2
texture = ExtResource( 5 )

[node name="transparente" type="Sprite" parent="."]
modulate = Color( 0.160784, 0.960784, 1, 1 )
position = Vector2( 436, 361 )
scale = Vector2( 11.6135, 11.703 )
z_index = -1
texture = ExtResource( 6 )

[node name="Spawn nubes" parent="." instance=ExtResource( 2 )]
position = Vector2( 66, -24 )

[node name="Spawn nubes2" parent="." instance=ExtResource( 2 )]
position = Vector2( 187, -90 )

[node name="Spawn nubes3" parent="." instance=ExtResource( 2 )]
position = Vector2( 330, -24 )

[node name="Spawn nubes6" parent="." instance=ExtResource( 2 )]
position = Vector2( 665, -86 )

[node name="Spawn nubes7" parent="." instance=ExtResource( 2 )]
position = Vector2( 774, -25 )

[node name="Spawn nubes4" parent="." instance=ExtResource( 2 )]
position = Vector2( 449, -84 )

[node name="Spawn nubes5" parent="." instance=ExtResource( 2 )]
position = Vector2( 555, -23 )

[node name="Node2D" type="Node2D" parent="."]
z_index = 2

[node name="Information" type="Control" parent="Node2D"]
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( -1130, 254 )
script = ExtResource( 1 )

[node name="Vbox" type="VBoxContainer" parent="Node2D/Information"]
margin_left = 824.0
margin_top = 31.0
margin_right = 1091.0
margin_bottom = 299.0
rect_scale = Vector2( 0.59999, 0.59999 )
theme = ExtResource( 7 )

[node name="HBoxContainer" type="HBoxContainer" parent="Node2D/Information/Vbox"]
margin_right = 267.0
margin_bottom = 64.0

[node name="lb_hs" type="Label" parent="Node2D/Information/Vbox/HBoxContainer"]
margin_right = 110.0
margin_bottom = 64.0
text = "HS "

[node name="Highscore" type="Label" parent="Node2D/Information/Vbox/HBoxContainer"]
margin_left = 114.0
margin_right = 154.0
margin_bottom = 64.0
text = "0"

[node name="HBoxContainer2" type="HBoxContainer" parent="Node2D/Information/Vbox"]
margin_top = 68.0
margin_right = 267.0
margin_bottom = 132.0

[node name="lb_sc" type="Label" parent="Node2D/Information/Vbox/HBoxContainer2"]
margin_right = 103.0
margin_bottom = 64.0
text = "SC "

[node name="Score" type="Label" parent="Node2D/Information/Vbox/HBoxContainer2"]
margin_left = 107.0
margin_right = 147.0
margin_bottom = 64.0
text = "0"

[node name="HBoxContainer3" type="HBoxContainer" parent="Node2D/Information/Vbox"]
margin_top = 136.0
margin_right = 267.0
margin_bottom = 200.0

[node name="lb_lv" type="Label" parent="Node2D/Information/Vbox/HBoxContainer3"]
margin_right = 178.0
margin_bottom = 64.0
text = "Lives "

[node name="Lives_lb" type="Label" parent="Node2D/Information/Vbox/HBoxContainer3"]
margin_left = 182.0
margin_right = 222.0
margin_bottom = 64.0
text = "0"

[node name="HBoxContainer4" type="HBoxContainer" parent="Node2D/Information/Vbox"]
margin_top = 204.0
margin_right = 267.0
margin_bottom = 268.0

[node name="lb_bmb" type="Label" parent="Node2D/Information/Vbox/HBoxContainer4"]
margin_right = 223.0
margin_bottom = 64.0
text = "Bombs "

[node name="Bombs_lb" type="Label" parent="Node2D/Information/Vbox/HBoxContainer4"]
margin_left = 227.0
margin_right = 267.0
margin_bottom = 64.0
text = "0"

[node name="HBoxContainer5" type="HBoxContainer" parent="Node2D/Information/Vbox"]
margin_top = 272.0
margin_right = 267.0
margin_bottom = 336.0

[node name="lb_pw" type="Label" parent="Node2D/Information/Vbox/HBoxContainer5"]
margin_right = 204.0
margin_bottom = 64.0
text = "Power "

[node name="Power_lb" type="Label" parent="Node2D/Information/Vbox/HBoxContainer5"]
margin_left = 208.0
margin_right = 248.0
margin_bottom = 64.0
text = "0"
